<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image"
    tools:context=".MainActivity">

    <!-- Scrollable Content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp"
            android:layout_marginBottom="24dp">

            <!-- Comet Image -->
            <ImageView
                android:layout_width="232dp"
                android:layout_height="247dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/advance_mode_img" />

            <!-- Title -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ASTEROIDS"
                android:textSize="60sp"
                android:fontFamily="@font/bricksans_bold"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:shadowColor="#000000"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="4"
                android:layout_marginBottom="20dp"/>

            <!-- Description Box -->
            <LinearLayout
                android:layout_width="337dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_box"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/anton_regular"
                        android:paddingStart="8dp"
                        android:justificationMode="inter_word"
                        android:text="@string/AsteroidsText"
                        android:textColor="@android:color/holo_red_light"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:justificationMode="inter_word"
                        android:fontFamily="@font/anton_regular"
                        android:text="@string/AsteroidsTextCharacteristics"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:justificationMode="inter_word"
                        android:text="@string/AsteroidsTextSpeed"
                        android:fontFamily="@font/anton_regular"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:justificationMode="inter_word"
                        android:fontFamily="@font/anton_regular"
                        android:text="@string/AsteroidsTextSize"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <!-- Fixed Back Button -->
    <ImageView
        android:id="@+id/backButton"
        android:layout_width="32dp"
        android:layout_height="36dp"
        android:layout_margin="16dp"
        android:src="@drawable/back_arrow"
        android:layout_gravity="top|start" />

</FrameLayout>
